--- a/Huating Sun-Different Metrics.ipynb
+++ b/Huating Sun-Different Metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4    0      2       1  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "max      3.000000    1.000000  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,11 +507,12 @@
     "        prediction = classification.predict(X_train)\n",
     "        result_report = pd.DataFrame(classification_report(y_train, prediction, output_dict=True))\n",
     "        cm = confusion_matrix(y_train, prediction)\n",
-    "        FN = cm[0][1]\n",
+    "        FN = cm[1][0]\n",
+    "        TP = cm[1][1]\n",
     "        print(\"Train Result:\\n================================================\")\n",
     "        print(f\"Accuracy Score: {accuracy_score(y_train, prediction) * 100:.2f}%\")\n",
     "        print(\"_______________________________________________\")\n",
-    "        print(f\"False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \\n{(FN/len(y_train)) * 100:.2f}%\")\n",
+    "        print(f\"False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \\n{(FN/(FN+TP)) * 100:.2f}%\")\n",
     "        print(\"_______________________________________________\")\n",
     "        print(f\"Classification Report:\\n{classification}\")\n",
     "        print(\"_______________________________________________\")\n",
@@ -520,11 +521,12 @@
     "        prediction = classification.predict(X_test)\n",
     "        result_report = pd.DataFrame(classification_report(y_test, prediction, output_dict=True))\n",
     "        cm = confusion_matrix(y_test, prediction)\n",
-    "        FN = cm[0][1]\n",
+    "        FN = cm[1][0]\n",
+    "        TP = cm[1][1]\n",
     "        print(\"Test Result:\\n================================================\")        \n",
     "        print(f\"Accuracy Score: {accuracy_score(y_test, prediction) * 100:.2f}%\")\n",
     "        print(\"_______________________________________________\")\n",
-    "        print(f\"False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \\n{(FN/len(y_test)) * 100:.2f}%\")\n",
+    "        print(f\"False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \\n{(FN/(FN+TP)) * 100:.2f}%\")\n",
     "        print(\"_______________________________________________\")\n",
     "        print(f\"Classification Report:\\n{classification}\")\n",
     "        print(\"_______________________________________________\")\n",
@@ -540,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -551,8 +553,8 @@
       "================================================\n",
       "Accuracy Score: 85.95%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "8.68%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "9.92%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "LogisticRegression(random_state=0, solver='liblinear')\n",
@@ -565,8 +567,8 @@
       "================================================\n",
       "Accuracy Score: 88.52%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "6.56%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "8.82%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "LogisticRegression(random_state=0, solver='liblinear')\n",
@@ -589,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +607,7 @@
        "0.8852459016393442"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -636,8 +638,8 @@
       "================================================\n",
       "Accuracy Score: 72.73%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "16.12%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "20.61%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "LogisticRegression(random_state=0, solver='liblinear')\n",
@@ -650,8 +652,8 @@
       "================================================\n",
       "Accuracy Score: 73.77%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "11.48%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "26.47%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "LogisticRegression(random_state=0, solver='liblinear')\n",
@@ -681,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +708,7 @@
        "Text(0.5, 1.0, 'K Neighbors Classifier Scores as K Increases')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -737,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -748,8 +750,8 @@
       "================================================\n",
       "Accuracy Score: 86.36%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "7.44%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "11.45%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "KNeighborsClassifier(n_neighbors=8)\n",
@@ -762,8 +764,8 @@
       "================================================\n",
       "Accuracy Score: 86.89%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "6.56%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "11.76%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "KNeighborsClassifier(n_neighbors=8)\n",
@@ -786,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +804,7 @@
        "0.819672131147541"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -833,8 +835,8 @@
       "================================================\n",
       "Accuracy Score: 76.45%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "8.26%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "28.24%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "KNeighborsClassifier(n_neighbors=8)\n",
@@ -847,8 +849,8 @@
       "================================================\n",
       "Accuracy Score: 70.49%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "13.11%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "29.41%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "KNeighborsClassifier(n_neighbors=8)\n",
@@ -878,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -889,8 +891,8 @@
       "================================================\n",
       "Accuracy Score: 86.36%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "8.68%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "9.16%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "SVC(gamma=0.01)\n",
@@ -903,8 +905,8 @@
       "================================================\n",
       "Accuracy Score: 88.52%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "4.92%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "11.76%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "SVC(gamma=0.01)\n",
@@ -926,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -955,8 +957,8 @@
       "================================================\n",
       "Accuracy Score: 71.90%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "18.60%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "17.56%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "SVC(gamma=0.01, random_state=0)\n",
@@ -969,8 +971,8 @@
       "================================================\n",
       "Accuracy Score: 68.85%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "18.03%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "23.53%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "SVC(gamma=0.01, random_state=0)\n",
@@ -999,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1025,7 @@
        "Text(0.5, 1.0, 'Decision Tree Classifier Scores as Number of Maximum Features')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1054,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1067,7 @@
       "================================================\n",
       "Accuracy Score: 100.00%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
       "0.00%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
@@ -1079,8 +1081,8 @@
       "================================================\n",
       "Accuracy Score: 85.25%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "4.92%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "17.65%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "DecisionTreeClassifier(max_features=10, random_state=0)\n",
@@ -1102,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1115,7 @@
       "================================================\n",
       "Accuracy Score: 100.00%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
       "0.00%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
@@ -1127,8 +1129,8 @@
       "================================================\n",
       "Accuracy Score: 70.49%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "19.67%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "17.65%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "DecisionTreeClassifier(max_features=10, random_state=0)\n",
@@ -1157,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1170,7 @@
       "================================================\n",
       "Accuracy Score: 100.00%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
       "0.00%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
@@ -1182,8 +1184,8 @@
       "================================================\n",
       "Accuracy Score: 86.89%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "6.56%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "11.76%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "RandomForestClassifier(n_estimators=1000, random_state=0)\n",
@@ -1204,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1217,7 @@
       "================================================\n",
       "Accuracy Score: 100.00%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
       "0.00%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
@@ -1229,8 +1231,8 @@
       "================================================\n",
       "Accuracy Score: 72.13%\n",
       "_______________________________________________\n",
-      "False Negative Percentage(The patients predicted to have no heart disease but does have heart disease): \n",
-      "11.48%\n",
+      "False Negative Rate(The patients predicted to have no heart disease but does have heart disease): \n",
+      "29.41%\n",
       "_______________________________________________\n",
       "Classification Report:\n",
       "RandomForestClassifier(n_estimators=1000, random_state=0)\n",
